[tool.poetry]
name = "youtube-watchlater-api"
version = "0.1.0"
description = ""
authors = ["Axmin Shrestha <56112475+ax-sh@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "youtube_watchlater_api"}]

[tool.poetry.dependencies]
python = "^3.10"
yt-dlp = "^2023.7.6"
requests = "^2.31.0"
fastapi = "^0.100.0"
uvicorn = {extras = ["standard"], version = "^0.23.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
